# perso_assign_4_1

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: perso_assign_4_1.tex  perso_assign_4_1_pres.tex  task_paper.py
src/perso_assign_4_1/: __init__.py
src/perso_assign_4_1/analysis/: task_analysis.py
src/perso_assign_4_1/data_management/: __init__.py  task_data_management.py
src/perso_assign_4_1/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
